syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    Live index levels and quotes including SpiderRock synthetic index levels and quotes.
*/    
message IndexQuote {
    message PKey {
        
        TickerKey ticker = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    IdxSrc price_source = 100; // price source of the quote (indication print or quote message)
    IdxDataSource data_source = 101; // source feed for this index quote
    double idx_bid = 103; // index bid value (if from quote, otherwise idxPrice)
    double idx_ask = 106; // index ask value (if from quote, otherwise idxPrice)
    double idx_price = 109; // index price
    int64 net_timestamp = 112; // index price timestamp
    google.protobuf.Timestamp timestamp = 115;
}


